fix gap in tx list account interaction area

--- a/src/less/nault-theme.less
+++ b/src/less/nault-theme.less
@@ -664,7 +664,7 @@ input[type=number] {
 				flex-direction: row;
 				align-items: center;
 				height: 28px;
-				margin-bottom: 5px;
+				padding-bottom: 8px;
 
 				.nano-identicon {
 					display: inline-block;
@@ -682,7 +682,6 @@ input[type=number] {
 
 			.nano-address-clickable {
 				flex-shrink: 0;
-				margin-top: 3px;
 			}
 		}
 
